# test

./: .gitignore  AVIATEUR_CAR_CONTROL_PRD.md  CAR_CONTROL_OPTIMIZATION_PRD.md  DEVELOPMENT_LOG.md  RAIL_FOLLOWER_PERFORMANCE_ANALYSIS.md  README.md  VALIDATION_GUIDE.md  WEB_CONTROL_PRD.md  sbus_cmd_vel_node.cpp  固定云台版本.cpp
aviateur_car_control/: INTEGRATION_GUIDE.md  MANUAL_BUILD_STEPS.txt  WINDOWS_BUILD_GUIDE.md  car_control_module.cpp  car_control_module.h  rebuild.bat  rosbridge_server.py  setup_and_build.bat  setup_and_build_en.bat  test_car_control.py
car_control_upgrade/: CMakeLists.txt
car_control_upgrade/launch/: control_v3.launch
car_control_upgrade/ros/: serial_bridge_v2.py  straight_controller_v3.cpp
car_control_upgrade/stm32/: balance_v3_integration.c
car_control_upgrade/stm32/inc/: ekf_estimator.h  pid_controller.h  wheeltec_protocol_v2.h
car_control_upgrade/stm32/src/: ekf_estimator.c  pid_controller.c  wheeltec_protocol_v2.c
car_control_upgrade/test/: test_upgrade_suite.py
catkin_ws/: CAR_STARTUP_GUIDE.md  auto.sh  car_autostart.sh  car_quick_start.sh  car_stop.sh  st.sh
catkin_ws/src/: 使用说明.txt
catkin_ws/src/sbus_serial/: CMakeLists.txt  sbus_cmd_vel.launch  sbus_serial.launch
catkin_ws/src/sbus_serial/src/: s-buscmd_vel.cpp  sbus_cmd_vel_node.cpp  sbus_serial_node.cpp
catkin_ws/src/turn_on_wheeltec_robot/: CMakeLists.txt  package.xml
catkin_ws/src/turn_on_wheeltec_robot/launch/: rail_follower.launch  wheeltec_lidar.launch
catkin_ws/src/turn_on_wheeltec_robot/scripts/: start_robot_3panels.sh
catkin_ws/src/turn_on_wheeltec_robot/src/: 9.2save_test.cpp  rail_follower_controller.cpp  rail_follower_controller_v11.cpp  revised.cpp  straight_controller.cpp  straight_controller_original.cpp  wheeltec_robot.cpp
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTROL_SYSTEM.md  IMAGE_STITCHING.md  WEB_INTERFACE.md
openspec/changes/archive/2026-06-29-optimize-stitching/: PROPOSAL.md  SPEC.md
openspec/changes/optimize-stitching/: .openspec.yaml  DESIGN.md  IMPLEMENTATION_PLAN.md  TASKS.md
optimize_stitching/: README.md  __init__.py  adaptive_sampler.py  config.py  content_detector.py  degrade_manager.py  exceptions.py  image_enhancer.py  logger.py  main.py  optical_flow.py  output_writer.py  seam_blender.py  seam_detector.py  stitcher.py  video_reader.py
optimize_stitching/tests/: test_adaptive_sampler.py  test_config.py  test_content_detector.py  test_degrade_manager.py  test_exceptions.py  test_image_enhancer.py  test_integration.py  test_logger.py  test_optical_flow.py  test_output_writer.py  test_seam_blender.py  test_seam_detector.py  test_stitcher.py  test_video_reader.py
